[TRONAPI-127] Add page layout component.

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import "styles/mixins";
 @import "styles/colors";
 @import "styles/fonts";
+@import "styles/spacing";
 
 /** Overrides */
 h1, h2, h3, h4, h5, h6 {
