--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,7 @@ $light-accent: #4ac1db;
 $light-shade: rgb(241,244,249);
 
 $page-title-background: #e9edf2;
+$page-border-color: #dee2e8;
 
 $success: #3da67c;
 $error: #f44336;
@@ -17,4 +18,6 @@ $error: #f44336;
 .remove-icon-color {
   color: $error;
 }
+
+
 
