--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,3 +1,11 @@
 //@import "~@trussworks/react-uswds/lib/uswds.css";
 @import "../../styles/base";
 @import "~uswds/dist/scss/elements/buttons";
+
+.usa-button.usa-button--outline.usa-button--inverse{
+  color: color('gray-60');
+  box-shadow: inset 0 0 0 2px color('gray-40');
+  &:hover {
+    color: color('gray-40');
+  }
+}
