--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -9,10 +9,15 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Lato, 'sans-serif';
   @include u-line-height('heading', 2);
 }
-div, span, p {
+p {
   font-family: Roboto, Arial, 'sans-serif';
   @include u-font-size('body', 'sm');
   @include u-line-height('body', 5);
+}
+
+div, span {
+  font-family: Roboto, Arial, 'sans-serif';
+  @include u-font-size('body', 'sm');
 }
 
 
