[TRONAPI-114] Update status card.

--- a/src/components/Sidebar/SidebarItem.scss
+++ b/src/components/Sidebar/SidebarItem.scss
@@ -10,6 +10,7 @@
 
         .sidebar-item__name {
             border-left: calculateRem(5px) solid $light-accent;
+            margin-bottom: calculateRem(16px);
         }
     }
 
