[TRONAPI-141] Add current logged in user initials to top of page header.

--- a/src/styles/_spacing.scss
+++ b/src/styles/_spacing.scss
@@ -1,5 +1,8 @@
 @import "variables";
 
+$page-padding: units(2.5);
+
 .default-panel-padding {
   padding: $default-panel-padding-x $default-panel-padding-y;
 }
+
