--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 @import "mixins";
 @import "~uswds/dist/scss/core/functions";
 
-$default-panel-padding-y: units(2.5); //calculateRem(20px);
-$default-panel-padding-x: units(2.5); //calculateRem(20px);
+$default-panel-padding-y: units(2.5);
+$default-panel-padding-x: units(2.5);
