--- a/src/components/PageFormat/PageFormat.scss
+++ b/src/components/PageFormat/PageFormat.scss
@@ -1,5 +1,4 @@
-@import "../../styles/colors";
-@import "../../styles/variables";
+@import "../../styles/base";
 
 .page-format {
   display: flex;
@@ -15,6 +14,12 @@
   &__top-nav {
     height: 70px;
     border-bottom: 1px solid $page-border-color;
+    display: flex;
+    justify-content: flex-end;
+    padding: $default-panel-padding-y $page-padding ;
+    .header-user-info {
+      align-self: center;
+    }
   }
 
   &__page-body {
@@ -27,7 +32,7 @@
       flex: 0 0 80px;
       background: $page-title-background;
       border-bottom: 1px solid $page-border-color;
-      padding: $default-panel-padding-y 2.5rem ;
+      padding: $default-panel-padding-y $page-padding ;
     }
     &__content {
       flex: 1;
