--- a/src/components/BackdropOverlay/BackdropOverlay.scss
+++ b/src/components/BackdropOverlay/BackdropOverlay.scss
@@ -5,4 +5,11 @@
   background-color: rgba(0,0,0,0.7);
   top: 0;
   right: 0;
+  animation-name: custom-fadein;
+  animation-duration: 0.5s;
+}
+
+@keyframes custom-fadein {
+  0%   {opacity: 0;}
+  100% {opacity: 1;}
 }
