--- a/src/components/SideDrawer/SideDrawer.scss
+++ b/src/components/SideDrawer/SideDrawer.scss
@@ -9,6 +9,7 @@
   top: 0;
   right: 0;
   width: 25%;
+  min-width: calculateRem(300px);
   z-index: 200;
   transform: translateX(100%);
   transition: transform 0.3s ease-out;
@@ -21,8 +22,13 @@
   &__header {
     display: flex;
     align-items: center;
-    padding: calculateRem(8px) calculateRem(8px);
-    border-bottom: 1px solid gray;
+    padding: calculateRem(8px) calculateRem(16px);
+
+    .close-btn {
+      padding: 0;
+      border: none;
+      background: none;
+    }
   }
 
   .header {
@@ -36,7 +42,7 @@
   }
 
   &__content {
-    padding: calculateRem(16px) calculateRem(16px);
+    padding: calculateRem(8px) calculateRem(16px);
   }
 }
 
