--- a/src/pages/AppClient/AppClientForm.scss
+++ b/src/pages/AppClient/AppClientForm.scss
@@ -1,25 +1,54 @@
+@import "../../styles/base";
 @import "../../styles/mixins";
+@import "../../styles/spacing";
 
 .client-form {
   .client-name-container {
-    margin-bottom: calculateRem(10px);
+    margin-bottom: calculateRem(20px);
+
+    &__input {
+      display: block;
+      width: 100%;
+    }
+
+    &__error {
+      color: red;
+    }
+
+    .usa-input--error {
+      position: relative;
+      animation: shake .1s linear;
+      animation-iteration-count: 1;
+      border: 2px solid red;
+      border-radius: calculateRem(3px);
+      outline: none;
+    }
   }
 
   .permissions-container {
-    margin-bottom: calculateRem(10px);
+    margin-bottom: calculateRem(20px);
 
-    &__options {
-      margin-left: calculateRem(20px);
+    .usa-checkbox {
+      &__label {
+        margin-left: calculateRem(10px);
+      }
 
-      .usa-checkbox {
-        &__label {
-          margin-left: calculateRem(5px);
-        }
+      &__label, &__input {
+        cursor: pointer;
       }
     }
   }
 
   .submit-btn {
     float: right;
+  }
+}
+
+@keyframes shake {
+  0% {
+    left: calculateRem(5px);
+  }
+  100% {
+    right: calculateRem(5px);
   }
 }
