create form actions

--- a/src/pages/AppClient/AppClientPage.scss
+++ b/src/pages/AppClient/AppClientPage.scss
@@ -1,3 +1,9 @@
+@import"../../styles/mixins";
+
+.add-app-client {
+  margin-bottom: calculateRem(16px);
+}
+
 .ag-grid--row-pointer {
   cursor: pointer;
 }
