[TRONAPI-192] Updated app client management page styles.

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -1,3 +1,10 @@
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-alpine.css";
 
+.grid-component {
+  .header-center {
+    .ag-header-cell-label {
+      justify-content: center;
+    }
+  }
+}
