--- a/src/pages/AppClient/AppClientForm.scss
+++ b/src/pages/AppClient/AppClientForm.scss
@@ -39,6 +39,9 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    &__submit {
+      margin-left: units(2);
+    }
   }
 
   @media (min-width: 30em) {
@@ -53,6 +56,18 @@
 
   .successful-operation {
     color: green;
+  }
+
+  &__success-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .successful-operation {
+      margin: 0;
+    }
+    .success-container__close {
+      margin: 0;
+    }
   }
 }
 
