Convert App Client Page to use DataCrudFormPage

--- a/src/components/DataCrudFormPage/DataCrudFormPage.scss
+++ b/src/components/DataCrudFormPage/DataCrudFormPage.scss
@@ -1,9 +1,5 @@
 @import"../../styles/mixins";
 
-.add-app-client {
+.add-data-container {
   margin-bottom: calculateRem(16px);
-}
-
-.ag-grid--row-pointer {
-  cursor: pointer;
 }
