--- a/src/hocs/UseLoading/UseLoading.scss
+++ b/src/hocs/UseLoading/UseLoading.scss
@@ -1,14 +1,16 @@
 .loading-page-container {
-  position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,1);
-  top: 0;
-  right: 0;
 
-  &__spinner {
-    position: fixed;
+  &__spinner-wrapper {
+    display: inline-block;
+    position: relative;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
   }
+}
+
+.loading-page-container--fixed {
+  position: fixed;
 }
