--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,7 +8,7 @@ $theme-image-path: '~uswds/dist/img';
 
 /** Overrides */
 h1, h2, h3, h4, h5, h6 {
-  font-family: Lato, 'sans-serif';
+  font-family: Lato, sans-serif;
   @include u-line-height('heading', 2);
   color: $font-color-normal;
   a & {
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 p {
-  font-family: Roboto, Arial, 'sans-serif';
+  font-family: Roboto, Arial, sans-serif;
   @include u-font-size('body', 'sm');
   @include u-line-height('body', 5);
   color: $font-color-normal;
@@ -27,7 +27,7 @@ a {
 }
 
 div, span {
-  font-family: Roboto, Arial, 'sans-serif';
+  font-family: Roboto, Arial, sans-serif;
   @include u-font-size('body', 'sm');
   color: $font-color-normal;
 }
