--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,3 @@
-
 // Function for converting a px based font-size to rem.
 @function calculateRem($size) {
   $remSize: $size / 16px;
@@ -10,4 +9,39 @@
 @mixin fontSize($size) {
   font-size: $size;
   font-size: calculateRem($size);
+}
+
+$breakpoints: (
+  mobile: 36em,
+  tablet: 48em,
+  laptop: 62em,
+  desktop: 75em
+);
+
+@mixin breakpoint-above($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+
+    $breakpoint-value: map-get($breakpoints, $breakpoint);
+
+    @media (min-width: $breakpoint-value) {
+      @content;
+    }
+
+  } @else {
+    @warn 'Invalid breakpoint: #{$breakpoint}.';
+  }
+}
+
+@mixin breakpoint-below($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+
+    $breakpoint-value: map-get($breakpoints, $breakpoint);
+
+    @media (max-width: ($breakpoint-value - 1)) {
+      @content;
+    }
+
+  } @else {
+    @warn 'Invalid breakpoint: #{$breakpoint}.';
+  }
 }
