App Source page, misc styles & app source tests

--- a/src/pages/AppSource/AppSourceClientAddForm.scss
+++ b/src/pages/AppSource/AppSourceClientAddForm.scss
@@ -1,6 +1,6 @@
 @import '../../styles/mixins';
 
-.app-source-client-add {
+.app-source-client-form {
   width: 30vw;
 
   @include breakpoint-below(laptop) {
