--- a/src/components/SideDrawer/SideDrawer.scss
+++ b/src/components/SideDrawer/SideDrawer.scss
@@ -15,6 +15,14 @@
   transition: transform 0.3s ease-out;
   overflow: auto;
 
+  @include breakpoint-below(desktop) {
+    width: 40%;
+  }
+
+  @include breakpoint-below(mobile) {
+    width: 100%;
+  }
+
   &.open {
     transform: translateX(0%);
   }
