--- a/src/pages/AppSource/AppSourceForm.scss
+++ b/src/pages/AppSource/AppSourceForm.scss
@@ -1,8 +1,9 @@
 @import '../../styles/base';
 
 .app-source-form {
-  &__add-client-btn {
-    margin-top: 0 !important;
-    margin-bottom: units(1);
+  &__add-admin-btn {
+    width: 100%;
+    margin-top: units(0.5) !important;
+    margin-bottom: units(0.5);
   }
 }
