Add Endpoint management to App Source Page

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -47,3 +47,11 @@
     border-top: solid 1px $page-border-color;
   }
 }
+
+.ReactModal__Body--open {
+  overflow: hidden;
+}
+
+.ReactModal__Content {
+  max-height: 100vh;
+}
