--- a/src/components/SideDrawer/SideDrawer.scss
+++ b/src/components/SideDrawer/SideDrawer.scss
@@ -2,6 +2,10 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
+.side-drawer--open {
+  overflow: hidden;
+}
+
 .side-drawer {
   height: 100%;
   background: white;
