--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,16 +1,16 @@
 .spinner-container {
   width: 100%;
   height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .spinner-container--centered {
   .spinner-container {
     &__spinner-wrapper {
-      display: inline-block;
-      position: relative;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      flex-shrink: 0;
     }
   }
 }
