Styling updates to AppSourceEndpointEditor

--- a/src/pages/AppSource/AppSourceEndpointEditor.scss
+++ b/src/pages/AppSource/AppSourceEndpointEditor.scss
@@ -1,6 +1,8 @@
 .endpoint-editor {
-  // force inputs to take full width
-  input {
-    min-width: 100%;
+  // force form to take full width
+  .tron-form {
+    .usa-form {
+      max-width: none;
+    }
   }
 }
