--- a/src/components/HeaderUserInfo/HeaderUserEditor.scss
+++ b/src/components/HeaderUserInfo/HeaderUserEditor.scss
@@ -35,4 +35,27 @@
     .branch-rank-container {
         width: 220px;
     }
+    .usa-select {
+        width: 104px;
+    }
+    &__initials {
+        background: $main-brand-color;
+        display: table;
+        color: white;
+        padding: units(1);
+        border-radius: 50%;
+        font-family: $headings-font-family;
+        font-weight: bold;
+        min-width: 39px;
+        text-align: center;
+        margin-right: 10px;
+    }
+}
+
+.success-error-message {
+  .success-container {
+      &__validation-error {
+        color: red;
+      }
+  }
 }
