Added visual for required fields on forms

--- a/src/components/forms/FormGroup/FormGroup.scss
+++ b/src/components/forms/FormGroup/FormGroup.scss
@@ -1,5 +1,13 @@
 @import '../../../styles/base';
+@import '../../../styles/colors';
 
 .validation-error {
   color: $error;
+}
+
+.label {
+  &--required::after {
+    content: ' *';
+    color: $required-input;
+  }
 }
