--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -29,6 +29,7 @@ $font-color-lighter: color('gray-cool-50');
 $success: color($theme-color-success);
 $error: color($theme-color-error);
 $disabled: #c9c9c9;
+$required-input: #b50909;
 
 .success-icon-color {
   color: $success;
