--- a/src/components/forms/FormGroup/FormGroup.scss
+++ b/src/components/forms/FormGroup/FormGroup.scss
@@ -1,13 +1,17 @@
 @import '../../../styles/base';
 @import '../../../styles/colors';
 
-.validation-error {
-  color: $error;
-}
-
 .label {
   &--required::after {
     content: ' *';
     color: $required-input;
+  }
+}
+
+.validation {
+  list-style-position: inside;
+  padding: 0;
+  &__error {
+    color: $error;
   }
 }
