Add Source Sans Pro font

--- a/src/components/DataCrudFormPage/DataCrudFormPage.scss
+++ b/src/components/DataCrudFormPage/DataCrudFormPage.scss
@@ -3,3 +3,9 @@
 .add-data-container {
   margin-bottom: calculateRem(16px);
 }
+
+.data-crud-content {
+  div {
+    font-family: Source Sans Pro, Roboto, Arial, sans-serif;
+  }
+}
