--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,3 +32,6 @@ div, span {
   color: $font-color-normal;
 }
 
+.usa-combo-box__list, .usa-combo-box__input, .usa-input-group, .usa-input, .usa-textarea, .usa-range, .usa-select, .usa-fieldset, .usa-hint {
+  font-family: Source Sans Pro, Roboto, Arial, sans-serif;
+}
