--- a/src/components/SideDrawer/SideDrawer.scss
+++ b/src/components/SideDrawer/SideDrawer.scss
@@ -27,6 +27,25 @@
     width: 100%;
   }
 
+  &--wide {
+    @include breakpoint-above(desktop) {
+      width: 40%;
+    }
+    .tron-form .usa-form {
+      @include breakpoint-above(desktop) {
+        max-width: 100%;
+      }
+    }
+    .tron-text-input {
+      input {
+        max-width: 25em;
+      }
+      .item-choose__input {
+        max-width: none;
+      }
+    }
+  }
+
   &.open {
     transform: translateX(0%);
   }
