--- a/src/pages/ScratchStorage/ScratchStoragePage.scss
+++ b/src/pages/ScratchStorage/ScratchStoragePage.scss
@@ -3,22 +3,22 @@
 @import "../../styles/mixins";
 
 .scratch-storage-page {
-  .side-drawer {
-    @include breakpoint-above(desktop) {
-      width: 40%;
-    }
-    .tron-form .usa-form {
-      @include breakpoint-above(desktop) {
-        max-width: 100%;
-      }
-    }
-    .tron-text-input {
-      input {
-        max-width: 25em;
-      }
-      .item-choose__input {
-        max-width: none;
-      }
-    }
-  }
+  //.side-drawer {
+  //  @include breakpoint-above(desktop) {
+  //    width: 40%;
+  //  }
+  //  .tron-form .usa-form {
+  //    @include breakpoint-above(desktop) {
+  //      max-width: 100%;
+  //    }
+  //  }
+  //  .tron-text-input {
+  //    input {
+  //      max-width: 25em;
+  //    }
+  //    .item-choose__input {
+  //      max-width: none;
+  //    }
+  //  }
+  //}
 }
