[WIP] moved to icon.

--- a/src/components/forms/TextInput/TextInput.scss
+++ b/src/components/forms/TextInput/TextInput.scss
@@ -5,3 +5,11 @@
     padding: units(.5) units(1);
   }
 }
+
+.tron-text-input-inline {
+  display: inline-block;
+  width: 50%;
+  input {
+    padding: units(.5) units(1);
+  }
+}
