Handle multiple request response in datacrudformpage, fix bugs, tests

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -13,4 +13,8 @@
   &--disable-mobile-full-width {
     width: auto;
   }
+  
+  &--disable-transparent:disabled {
+    background-color: transparent;
+  }
 }
