--- a/src/components/forms/TextInput/TextInput.scss
+++ b/src/components/forms/TextInput/TextInput.scss
@@ -8,8 +8,8 @@
 
 .tron-text-input-inline {
   display: inline-block;
-  width: 50%;
+  width: 81%;
   input {
-    padding: units(.5) units(1);
+    padding: units(.5) units(.5);
   }
 }
