[TRONAPI-504] Add support for nested nav items.

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -10,4 +10,8 @@
     margin-top: calculateRem(30px);
     margin-left: calculateRem(12px);
   }
+  .nested-sidebar-nav {
+    margin-left: calculateRem(10px);
+    margin-bottom: 1rem;
+  }
 }
