[TRONAPI-504] Update unit tests for NestedSidebarNav.

--- a/src/components/NestedSidebarNav/NestedSidebarNav.scss
+++ b/src/components/NestedSidebarNav/NestedSidebarNav.scss
@@ -23,6 +23,11 @@
       }
     }
   }
+  .sidebar-item:last-child {
+    .sidebar-item__name {
+      margin-bottom: 0;
+    }
+  }
   .sidebar-item__name {
     font-size: 1rem;
     margin-left: .2rem;
