Organization Page form ui updates
Leader & Parent org with "X" remove button within text input.
Modals renamed for choosing Leader, Parent org, sub orgs, members.
Items can be "row selected" alongside checkboxes.
Chooser modals "Done" button renamed to "Select".
Icons inline with label for Members and Sub Org grid.
Replaced ID column with email for Leader and Member chooser.
Resized icons.

--- a/src/components/forms/Label/Label.scss
+++ b/src/components/forms/Label/Label.scss
@@ -1,6 +1,14 @@
+@import '../../../styles/base';
 
 .tron-label {
   label {
     font-weight: bold;
+  }
+
+  .label {
+    &--required::after {
+      content: ' *';
+      color: $required-input;
+    }
   }
 }
