--- a/src/components/forms/TextInput/TextInput.scss
+++ b/src/components/forms/TextInput/TextInput.scss
@@ -19,4 +19,25 @@
       width: 100%;
     }
   }
+
+  .tron-text-input__input-container {
+    width: 100%;
+    
+    &--delete {
+      position: relative;
+  
+      input[type="text"] {
+        margin-top: 0;
+        padding-right: 30px;
+      }
+  
+      button[type="button"] {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 0;
+        height: 100%;
+      }
+    }
+  }
 }
