--- a/src/components/HeaderUserInfo/HeaderUserInfo.scss
+++ b/src/components/HeaderUserInfo/HeaderUserInfo.scss
@@ -2,7 +2,7 @@
 
 .header-user-info {
   position: relative;
-  top: -5px;
+  top: calculateRem(-14px);
   &__initials {
     background: $main-brand-color;
     display: table;
@@ -11,8 +11,9 @@
     border-radius: 50%;
     font-family: $headings-font-family;
     font-weight: bold;
-    min-width: 39px;
-    min-height: 43px;
+    font-size: calculateRem(14px);
+    min-width: 56px;
+    min-height: 56px;
     &:after {
       font-size: calculateRem(10px);
     }
