Added transparent for buttons that need it, modified styles wehre needed

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,6 +10,11 @@
 }
 
 .usa-button {
+  // Default button color
+  background-color: #5F96EA;
+  border-radius: 8px;
+  padding: 12px;
+
   &--disable-mobile-full-width {
     width: auto;
   }
@@ -17,6 +22,10 @@
   &--disable-transparent:disabled {
     background-color: transparent;
   }
+}
+
+.no-bg-button {
+  background-color: transparent;
 }
 
 .inline-icon {
