--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -11,7 +11,7 @@
 
 .usa-button {
   // Default button color
-  background-color: #5F96EA;
+  background-color: color($theme-color-primary);
   border-radius: 8px;
   padding: 12px;
 
@@ -22,11 +22,12 @@
   &--disable-transparent:disabled {
     background-color: transparent;
   }
+
+  &--no-bg-button {
+    background-color: transparent;
+  }
 }
 
-.no-bg-button {
-  background-color: transparent;
-}
 
 .inline-icon {
   //float: right;
