[TRONAPI-657] Update label and heading font-family to Roboto.

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -203,5 +203,5 @@
   src: url('./fonts/source_sans_pro/SourceSansPro-BlackItalic.ttf') format('truetype');
 }
 
-$headings-font-family: 'Lato';
+$headings-font-family: 'Roboto';
 $body-font-family: 'Roboto';
