--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,7 +8,7 @@ $theme-image-path: '~uswds/dist/img';
 
 /** Overrides */
 h1, h2, h3, h4, h5, h6 {
-  font-family: Lato, sans-serif;
+  font-family: $headings-font-family;
   @include u-line-height('heading', 2);
   color: $font-color-normal;
   a & {
