Leverage unstyled tag to remove default styling

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -26,6 +26,12 @@
   &--no-bg-button {
     background-color: transparent;
   }
+
+  &--no-styling {
+    background-color: transparent;
+    border-radius: 0px;
+    padding: 0px;
+  }
 }
 
 
