--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -31,6 +31,10 @@ $error: color($theme-color-error);
 $disabled: #c9c9c9;
 $required-input: #b50909;
 
+.icon-color-primary {
+  color: color($theme-color-primary);
+}
+
 .success-icon-color {
   color: $success;
 }
