--- a/src/components/forms/TextInput/TextInput.scss
+++ b/src/components/forms/TextInput/TextInput.scss
@@ -47,8 +47,14 @@
     }
   }
 
-  &--search-bar {
-    padding:'0 0 0 2.2rem'
+  input.tron-text-input__search-bar {
+    padding: 0 .5rem 0 2.5rem;
+  }
+
+  .search-icon {
+    color: $font-color-lighter;
+    padding: calculateRem(7px) calculateRem(12px);
+    position: absolute;
   }
 }
 
